// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedNavigation mapDispatchToProps function fires 1`] = `
<Connect(Navigation)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Navigation
    activeApp="someApp"
    activeGroup="someGroup"
    activeLocation="someLocation"
    appId="someId"
    navHidden={false}
    onClearActive={[Function]}
    onNavigate={[Function]}
    settings={
      Array [
        Object {
          "ansible": Object {
            "id": "ansible",
            "routes": Array [],
            "title": "Red Hat Ansible Automation Platform",
          },
          "docs": Object {
            "id": "docs",
            "routes": Array [],
            "title": "Documentation",
          },
          "insights": Object {
            "id": "insights",
            "routes": Array [],
            "title": "Red Hat Insights",
          },
          "openshift": Object {
            "id": "openshift",
            "routes": Array [],
            "title": "Red Hat Openshift Cluster Manager",
          },
          "staging": Object {
            "id": "staging",
            "routes": Array [],
            "title": "Staging Bundle",
          },
        },
      ]
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <Nav
      aria-label="Insights Global Navigation"
      data-ouia-safe="true"
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      theme="dark"
    >
      <nav
        aria-label="Local"
        className="pf-c-nav"
        data-ouia-component-id={5}
        data-ouia-component-type="PF4/Nav"
        data-ouia-safe="true"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
        >
          <ul
            className="pf-c-nav__list"
            onScroll={[Function]}
          >
            <ExpandableNav
              activeApp="someApp"
              activeLocation="someLocation"
              ansible={
                Object {
                  "id": "ansible",
                  "routes": Array [],
                  "title": "Red Hat Ansible Automation Platform",
                }
              }
              docs={
                Object {
                  "id": "docs",
                  "routes": Array [],
                  "title": "Documentation",
                }
              }
              insights={
                Object {
                  "id": "insights",
                  "routes": Array [],
                  "title": "Red Hat Insights",
                }
              }
              onClick={[Function]}
              openshift={
                Object {
                  "id": "openshift",
                  "routes": Array [],
                  "title": "Red Hat Openshift Cluster Manager",
                }
              }
              staging={
                Object {
                  "id": "staging",
                  "routes": Array [],
                  "title": "Staging Bundle",
                }
              }
            >
              <NavigationItem
                isActive={false}
                onClick={[Function]}
                parent="someLocation"
              >
                <NavItem
                  className=""
                  isActive={false}
                  onClick={[Function]}
                  preventDefault={true}
                  to="http://localhost/someLocation/undefined"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="http://localhost/someLocation/undefined"
                      onClick={[Function]}
                    />
                  </li>
                </NavItem>
              </NavigationItem>
            </ExpandableNav>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </Navigation>
</Connect(Navigation)>
`;

exports[`ConnectedNavigation should render correctly with initial state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Navigation)>
    <Navigation
      activeApp="someApp"
      activeGroup="someGroup"
      activeLocation="someLocation"
      appId="someId"
      navHidden={false}
      onClearActive={[Function]}
      onNavigate={[Function]}
      settings={
        Array [
          Object {
            "ansible": Object {
              "id": "ansible",
              "routes": Array [],
              "title": "Red Hat Ansible Automation Platform",
            },
            "docs": Object {
              "id": "docs",
              "routes": Array [],
              "title": "Documentation",
            },
            "insights": Object {
              "id": "insights",
              "routes": Array [],
              "title": "Red Hat Insights",
            },
            "openshift": Object {
              "id": "openshift",
              "routes": Array [],
              "title": "Red Hat Openshift Cluster Manager",
            },
            "staging": Object {
              "id": "staging",
              "routes": Array [],
              "title": "Staging Bundle",
            },
          },
        ]
      }
    >
      <Nav
        aria-label="Insights Global Navigation"
        data-ouia-safe="true"
        onSelect={[Function]}
        onToggle={[Function]}
        ouiaSafe={true}
        theme="dark"
      >
        <nav
          aria-label="Local"
          className="pf-c-nav"
          data-ouia-component-id={3}
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <NavList
            ariaLeftScroll="Scroll left"
            ariaRightScroll="Scroll right"
          >
            <ul
              className="pf-c-nav__list"
              onScroll={[Function]}
            >
              <ExpandableNav
                activeApp="someApp"
                activeLocation="someLocation"
                ansible={
                  Object {
                    "id": "ansible",
                    "routes": Array [],
                    "title": "Red Hat Ansible Automation Platform",
                  }
                }
                docs={
                  Object {
                    "id": "docs",
                    "routes": Array [],
                    "title": "Documentation",
                  }
                }
                insights={
                  Object {
                    "id": "insights",
                    "routes": Array [],
                    "title": "Red Hat Insights",
                  }
                }
                onClick={[Function]}
                openshift={
                  Object {
                    "id": "openshift",
                    "routes": Array [],
                    "title": "Red Hat Openshift Cluster Manager",
                  }
                }
                staging={
                  Object {
                    "id": "staging",
                    "routes": Array [],
                    "title": "Staging Bundle",
                  }
                }
              >
                <NavigationItem
                  isActive={false}
                  onClick={[Function]}
                  parent="someLocation"
                >
                  <NavItem
                    className=""
                    isActive={false}
                    onClick={[Function]}
                    preventDefault={true}
                    to="http://localhost/someLocation/undefined"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="http://localhost/someLocation/undefined"
                        onClick={[Function]}
                      />
                    </li>
                  </NavItem>
                </NavigationItem>
              </ExpandableNav>
            </ul>
          </NavList>
        </nav>
      </Nav>
    </Navigation>
  </Connect(Navigation)>
</Provider>
`;

exports[`Navigation should render corectly 1`] = `
<Navigation
  activeApp="someApp"
  activeGroup="someID"
  activeLocation="openshift"
  appId="overview"
  documentation="someDocs"
  onClick={[MockFunction]}
  onNavigate={[MockFunction]}
  onSelect={[MockFunction]}
  settings={
    Array [
      Object {
        "active": true,
        "group": "insights",
        "id": "overview",
        "subItems": Array [
          Object {
            "default": true,
            "id": "someID",
            "title": "Clusters",
          },
        ],
        "title": "Overview",
      },
      Object {
        "active": false,
        "group": "insights",
        "id": "rules",
        "title": "Rules",
      },
      Object {
        "active": false,
        "group": "insights",
        "id": "topics",
        "title": "Topics",
      },
      Object {
        "active": false,
        "id": "inventory",
        "title": "Inventory",
      },
      Object {
        "active": false,
        "id": "remediations",
        "title": "Remediations",
      },
    ]
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Nav
    aria-label="Insights Global Navigation"
    data-ouia-safe="true"
    onSelect={[Function]}
    onToggle={[Function]}
    ouiaSafe={true}
    theme="dark"
  >
    <nav
      aria-label="Local"
      className="pf-c-nav"
      data-ouia-component-id={1}
      data-ouia-component-type="PF4/Nav"
      data-ouia-safe="true"
    >
      <NavList
        ariaLeftScroll="Scroll left"
        ariaRightScroll="Scroll right"
      >
        <ul
          className="pf-c-nav__list"
          onScroll={[Function]}
        >
          <ExpandableNav
            active={true}
            activeApp="someApp"
            activeLocation="openshift"
            group="insights"
            id="overview"
            key="overview"
            onClick={[Function]}
            subItems={
              Array [
                Object {
                  "default": true,
                  "id": "someID",
                  "title": "Clusters",
                },
              ]
            }
            title="Overview"
          >
            <NavExpandable
              className="ins-m-navigation-align"
              groupId={null}
              id="overview"
              isActive={true}
              isExpanded={true}
              itemID="overview"
              ouiaId="overview"
              srText=""
              title="Overview"
            >
              <li
                className="pf-c-nav__item pf-m-expandable pf-m-expanded pf-m-current ins-m-navigation-align"
                itemID="overview"
                onClick={[Function]}
                ouiaId="overview"
              >
                <button
                  aria-expanded={true}
                  className="pf-c-nav__link"
                  id="overview"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  Overview
                  <span
                    className="pf-c-nav__toggle"
                  >
                    <span
                      className="pf-c-nav__toggle-icon"
                    >
                      <AngleRightIcon
                        aria-hidden="true"
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden="true"
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </span>
                </button>
                <section
                  aria-labelledby="overview"
                  className="pf-c-nav__subnav"
                  hidden={null}
                >
                  <ul
                    className="pf-c-nav__list"
                  >
                    <NavigationItem
                      isActive={false}
                      itemID="someID"
                      key="0"
                      onClick={[Function]}
                      ouiaId="someID"
                      parent="openshift/overview"
                      title="Clusters"
                    >
                      <NavItem
                        className=""
                        isActive={false}
                        itemId="someID"
                        onClick={[Function]}
                        ouiaId="someID"
                        preventDefault={true}
                        to="http://localhost/openshift/overview/someID"
                      >
                        <li
                          className="pf-c-nav__item"
                        >
                          <a
                            aria-current={null}
                            className="pf-c-nav__link"
                            href="http://localhost/openshift/overview/someID"
                            onClick={[Function]}
                            ouiaId="someID"
                          >
                            Clusters
                          </a>
                        </li>
                      </NavItem>
                    </NavigationItem>
                  </ul>
                </section>
              </li>
            </NavExpandable>
          </ExpandableNav>
          <ExpandableNav
            active={false}
            activeApp="someApp"
            activeLocation="openshift"
            group="insights"
            id="rules"
            key="rules"
            onClick={[Function]}
            title="Rules"
          >
            <NavigationItem
              isActive={false}
              itemID="rules"
              onClick={[Function]}
              ouiaId="rules"
              parent="openshift"
              title="Rules"
            >
              <NavItem
                className=""
                isActive={false}
                itemId="rules"
                onClick={[Function]}
                ouiaId="rules"
                preventDefault={true}
                to="http://localhost/openshift/rules"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="http://localhost/openshift/rules"
                    onClick={[Function]}
                    ouiaId="rules"
                  >
                    Rules
                  </a>
                </li>
              </NavItem>
            </NavigationItem>
          </ExpandableNav>
          <ExpandableNav
            active={false}
            activeApp="someApp"
            activeLocation="openshift"
            group="insights"
            id="topics"
            key="topics"
            onClick={[Function]}
            title="Topics"
          >
            <NavigationItem
              isActive={false}
              itemID="topics"
              onClick={[Function]}
              ouiaId="topics"
              parent="openshift"
              title="Topics"
            >
              <NavItem
                className=""
                isActive={false}
                itemId="topics"
                onClick={[Function]}
                ouiaId="topics"
                preventDefault={true}
                to="http://localhost/openshift/topics"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="http://localhost/openshift/topics"
                    onClick={[Function]}
                    ouiaId="topics"
                  >
                    Topics
                  </a>
                </li>
              </NavItem>
            </NavigationItem>
          </ExpandableNav>
          <ExpandableNav
            active={false}
            activeApp="someApp"
            activeLocation="openshift"
            id="inventory"
            key="inventory"
            onClick={[Function]}
            title="Inventory"
          >
            <NavigationItem
              isActive={false}
              itemID="inventory"
              onClick={[Function]}
              ouiaId="inventory"
              parent="openshift"
              title="Inventory"
            >
              <NavItem
                className=""
                isActive={false}
                itemId="inventory"
                onClick={[Function]}
                ouiaId="inventory"
                preventDefault={true}
                to="http://localhost/openshift/inventory"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="http://localhost/openshift/inventory"
                    onClick={[Function]}
                    ouiaId="inventory"
                  >
                    Inventory
                  </a>
                </li>
              </NavItem>
            </NavigationItem>
          </ExpandableNav>
          <ExpandableNav
            active={false}
            activeApp="someApp"
            activeLocation="openshift"
            id="remediations"
            key="remediations"
            onClick={[Function]}
            title="Remediations"
          >
            <NavigationItem
              isActive={false}
              itemID="remediations"
              onClick={[Function]}
              ouiaId="remediations"
              parent="openshift"
              title="Remediations"
            >
              <NavItem
                className=""
                isActive={false}
                itemId="remediations"
                onClick={[Function]}
                ouiaId="remediations"
                preventDefault={true}
                to="http://localhost/openshift/remediations"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="http://localhost/openshift/remediations"
                    onClick={[Function]}
                    ouiaId="remediations"
                  >
                    Remediations
                  </a>
                </li>
              </NavItem>
            </NavigationItem>
          </ExpandableNav>
          <NavItemLink
            id="extra-openshift-support"
            key="extra-openshift-support"
            link="https://access.redhat.com/support/cases"
            title="Support Cases"
          >
            <NavItem
              className="ins-c-navigation__additional-links"
              key="extra-openshift-support"
              ouiaId="extra-openshift-support"
              to="https://access.redhat.com/support/cases"
            >
              <li
                className="pf-c-nav__item ins-c-navigation__additional-links"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link ins-c-navigation__additional-links"
                  href="https://access.redhat.com/support/cases"
                  onClick={[Function]}
                  ouiaId="extra-openshift-support"
                >
                  Support Cases
                   
                </a>
              </li>
            </NavItem>
          </NavItemLink>
          <NavItemLink
            id="extra-openshift-cm"
            key="extra-openshift-cm"
            link="mailto:ocm-feedback@redhat.com"
            title="Cluster Manager Feedback"
          >
            <NavItem
              className="ins-c-navigation__additional-links"
              key="extra-openshift-cm"
              ouiaId="extra-openshift-cm"
              to="mailto:ocm-feedback@redhat.com"
            >
              <li
                className="pf-c-nav__item ins-c-navigation__additional-links"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link ins-c-navigation__additional-links"
                  href="mailto:ocm-feedback@redhat.com"
                  onClick={[Function]}
                  ouiaId="extra-openshift-cm"
                >
                  Cluster Manager Feedback
                   
                </a>
              </li>
            </NavItem>
          </NavItemLink>
          <NavItemLink
            id="extra-openshift-marketplace"
            key="extra-openshift-marketplace"
            link="https://marketplace.redhat.com"
            title="Red Hat Marketplace"
          >
            <NavItem
              className="ins-c-navigation__additional-links"
              key="extra-openshift-marketplace"
              ouiaId="extra-openshift-marketplace"
              to="https://marketplace.redhat.com"
            >
              <li
                className="pf-c-nav__item ins-c-navigation__additional-links"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link ins-c-navigation__additional-links"
                  href="https://marketplace.redhat.com"
                  onClick={[Function]}
                  ouiaId="extra-openshift-marketplace"
                >
                  Red Hat Marketplace
                   
                </a>
              </li>
            </NavItem>
          </NavItemLink>
          <NavItemLink
            external={true}
            id="extra-openshift-docs"
            key="extra-openshift-docs"
            title="Documentation"
            url="https://docs.openshift.com/dedicated/4/"
          >
            <NavItem
              className="ins-c-navigation__additional-links"
              key="extra-openshift-docs"
              ouiaId="extra-openshift-docs"
              to="https://docs.openshift.com/dedicated/4/"
            >
              <li
                className="pf-c-nav__item ins-c-navigation__additional-links"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link ins-c-navigation__additional-links"
                  href="https://docs.openshift.com/dedicated/4/"
                  onClick={[Function]}
                  ouiaId="extra-openshift-docs"
                >
                  Documentation
                   
                  <ExternalLinkAltIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      />
                    </svg>
                  </ExternalLinkAltIcon>
                </a>
              </li>
            </NavItem>
          </NavItemLink>
        </ul>
      </NavList>
    </nav>
  </Nav>
</Navigation>
`;

exports[`Navigation should render correctly 2 1`] = `
<Nav
  aria-label="Insights Global Navigation"
  data-ouia-safe="true"
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <NavList
    ariaLeftScroll="Scroll left"
    ariaRightScroll="Scroll right"
  >
    <ExpandableNav
      active={true}
      activeApp="someApp"
      activeLocation="openshift"
      group="insights"
      id="overview"
      key="overview"
      onClick={[Function]}
      subItems={
        Array [
          Object {
            "default": true,
            "id": "someID",
            "title": "Clusters",
          },
        ]
      }
      title="Overview"
    />
    <ExpandableNav
      active={false}
      activeApp="someApp"
      activeLocation="openshift"
      group="insights"
      id="rules"
      key="rules"
      onClick={[Function]}
      title="Rules"
    />
    <ExpandableNav
      active={false}
      activeApp="someApp"
      activeLocation="openshift"
      group="insights"
      id="topics"
      key="topics"
      onClick={[Function]}
      title="Topics"
    />
    <ExpandableNav
      active={false}
      activeApp="someApp"
      activeLocation="openshift"
      id="inventory"
      key="inventory"
      onClick={[Function]}
      title="Inventory"
    />
    <ExpandableNav
      active={false}
      activeApp="someApp"
      activeLocation="openshift"
      id="remediations"
      key="remediations"
      onClick={[Function]}
      title="Remediations"
    />
    <NavItemLink
      id="extra-openshift-support"
      key="extra-openshift-support"
      link="https://access.redhat.com/support/cases"
      title="Support Cases"
    />
    <NavItemLink
      id="extra-openshift-cm"
      key="extra-openshift-cm"
      link="mailto:ocm-feedback@redhat.com"
      title="Cluster Manager Feedback"
    />
    <NavItemLink
      id="extra-openshift-marketplace"
      key="extra-openshift-marketplace"
      link="https://marketplace.redhat.com"
      title="Red Hat Marketplace"
    />
    <NavItemLink
      external={true}
      id="extra-openshift-docs"
      key="extra-openshift-docs"
      title="Documentation"
      url="https://docs.openshift.com/dedicated/4/"
    />
  </NavList>
</Nav>
`;
